UPdate  placeholder overallplan_add page

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -36,6 +36,38 @@
     "food_education_promotion": "Promotion of Food Education",
     "neuvola_integrated_support": "Neuvola Community Integrated Support",
     "parent_support_cooperation_alt": "Parent/Guardian Support & Collaboration",
-    "supportive_childcare": "Supportive Childcare"
+    "supportive_childcare": "Supportive Childcare",
+     "year_period": "Year / Period",
+     "year_placeholder": "e.g. 2025 School Year",
+     "situation_placeholder": "Please enter the childcare philosophy and policy",
+     "method_number": "Method {{number}}",
+      "situation_placeholder2": "Please fill in the childcare philosophy and policy...",
+       "method_placeholder": "Please enter method {{number}}",
+    "target_child_placeholder": "Describe the desired child image...",
+    "target_teacher_placeholder": "Describe the desired caregiver image...",
+    "health_mind_body_placeholder": "Please fill in about physical and mental health...",
+    "relations_close_people_placeholder": "Please fill in about relationships with close people...",
+    "relations_environment_nearby_placeholder": "Please fill in about engagement with the nearby environment...",
+    "human_rights_respect_placeholder": "Please fill in about respect for human rights...",
+    "expression_respect_placeholder": "Please fill in about expression and communication...",
+    "parent_support_placeholder": "Please fill in about parent/guardian support and collaboration...",
+    "community_cooperation_placeholder": "Please fill in about cooperation with the community...",
+    "primary_connection_placeholder": "Please fill in about connection to elementary school...",
+     "annual_month_placeholder": "e.g. January",
+    "annual_input_placeholder": "Please enter...",
+     "annual_month_col": "Month",
+    "annual_garden_event_col": "Nursery / School Events",
+    "annual_seasonal_event_col": "Seasonal Events",
+    "annual_food_education_col": "Food Education",
+    "annual_health_col": "Health",
+    "annual_neuvola_col": "Neuvola Support",
+    "annual_staff_training_col": "Staff Training",
+     "annual_col_month": "Month",
+    "annual_col_school_events": "School Events",
+    "annual_col_seasonal_events": "Seasonal Events",
+    "annual_col_food_education": "Food Education",
+    "annual_col_health": "Health",
+    "annual_col_neuvola": "Neuvola",
+    "annual_col_staff_training": "Staff Training"
   }
 }
