--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -36,6 +36,31 @@
     "food_education_promotion": "食育の推進",
     "neuvola_integrated_support": "ネウボラ地域包括支援",
     "parent_support_cooperation_alt": "保護者支援と連携",
-    "supportive_childcare": "サポート保育"
+    "supportive_childcare": "サポート保育",
+     "year_period": "年度 / 期間",
+      "year_placeholder": "例：2025年度",
+      "situation_placeholder": "保育の理念や方針を入力してください",
+       "method_number": "方法{{number}}",
+        "situation_placeholder2": "保育の理念や方針を記入してください...",
+        "method_placeholder": "方法{{number}}を入力してください",
+    "target_child_placeholder": "目指す子ども像...",
+    "target_teacher_placeholder": "望まれる保育者像...",
+    "health_mind_body_placeholder": "心と体の健康について記入してください...",
+    "relations_close_people_placeholder": "身近な人との関わりについて記入してください...",
+    "relations_environment_nearby_placeholder": "身近な環境との関わりについて記入してください...",
+    "human_rights_respect_placeholder": "人権の尊重について記入してください...",
+    "expression_respect_placeholder": "表出と表現の尊重について記入してください...",
+    "parent_support_placeholder": "保護者支援と連携について記入してください...",
+    "community_cooperation_placeholder": "地域との連携について記入してください...",
+    "primary_connection_placeholder": "小学校との接続について記入してください...",
+   "annual_col_month": "月",
+    "annual_col_school_events": "園行事",
+    "annual_col_seasonal_events": "季節の行事",
+    "annual_col_food_education": "食育",
+    "annual_col_health": "保健",
+    "annual_col_neuvola": "ネウボラ",
+    "annual_col_staff_training": "職員研修",
+     "annual_month_placeholder": "1月",
+    "annual_input_placeholder": "入力してください"
   }
 }
