Update chang lang annualplanadd page

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -69,5 +69,123 @@
     "annual_col_health": "Health",
     "annual_col_neuvola": "Neuvola",
     "annual_col_staff_training": "Staff Training"
+  },
+   "overallplan": {
+    "search_age": "Age",
+    "search_button": "Search",
+    "add_button": "Add",
+    "col_year": "Year",
+    "col_age": "Age",
+    "col_name": "Overall Plan",
+    "col_action": "Action"
+  },
+  "annualplan": {
+    "title": "Annual Teaching Plan Management",
+    "subtitle": "Annual Teaching Plan Records",
+    "filter_title": "Search & Filter",
+    "search_placeholder": "Search by plan or year...",
+    "year_label": "Year",
+    "age_label": "Age Group",
+    "status_label": "Status",
+    "reset_button": "Reset",
+    "add_button": "Add",
+    "col_year": "Year",
+    "col_age_group": "Age Group",
+    "col_classroom": "Classroom",
+    "col_responsible": "Responsible",
+    "col_status": "Status",
+    "col_manage": "Manage",
+    "status_draft": "Draft",
+    "status_completed": "Completed",
+    "status_approved": "Approved",
+    "delete_confirm": "Do you want to delete this teaching plan?",
+
+    "header_main_title": "Main Information (Main Table)",
+    "header_tooltip": "Basic information and annual goals",
+    "basic_info": "Basic Information",
+    "field_year": "Year",
+    "field_classroom": "Classroom *",
+    "field_age": "Age *",
+    "field_responsible": "Responsible",
+    "annual_goal_label": "Annual Goal (Desired Child's Growth)",
+    "annual_goal_ph": "Annual development goals for children...",
+    "dev_process_title": "Child Development Process",
+    "child_growth_title": "Child’s Growth",
+    "dev1_label": "Child Development 1",
+    "dev2_label": "Child Development 2",
+    "dev3_label": "Child Development 3",
+    "dev1_ph": "Child development process 1...",
+    "dev2_ph": "Child development process 2...",
+    "dev3_ph": "Child development process 3...",
+
+    "age_m1": "1 year",
+    "age_m1_6": "1 year 6 months",
+    "age_m2": "2 years",
+    "age_m2_11": "2 years 11 months",
+    "age2_m2": "2 years",
+    "age2_m2_6": "2 years 6 months",
+    "age2_m3": "3 years",
+    "age2_m3_11": "3 years 11 months",
+
+    "btn_back": "Back",
+    "btn_save_main": "Save Main Information",
+    "btn_saving": "Saving...",
+    "header_saved": "✅ Main information saved (ID: {{id}})",
+    "header_error": "❌ Please fill in the required fields.",
+    "header_saving": "⏳ Saving data...",
+
+    "progress_title": "Submission Progress",
+
+    "detail_title": "Tab Details (Detail Table)",
+    "period_start": "Start",
+    "period_end": "End",
+    "period_to": "～",
+    "last_saved": "Last saved",
+
+    "aim_title": "Goals",
+    "aim_nursing_label": "Nursing / Care",
+    "aim_nursing_ph": "Nursing / Care...",
+    "aim_education_label": "Education",
+    "aim_education_ph": "Education...",
+
+    "content_title": "Contents",
+    "content_nursing_title": "Nursing / Care",
+    "content_life_stability_label": "Preservation of Life & Emotional Stability",
+    "content_life_stability_ph": "Preservation of life and emotional stability...",
+    "content_education_title": "Education",
+    "content_dev_perspective_label": "Physical / Social / Mental Development",
+    "content_dev_perspective_ph": "Perspectives on physical, social, and mental development...",
+    "content_nutrition_title": "Food & Nutrition Education",
+    "content_nutrition_label": "Food & Nutrition Education",
+    "content_nutrition_ph": "Nutrition education...",
+
+    "global_family_title": "Family & Community Cooperation",
+    "global_family_ph": "Plans for cooperation with family and community...",
+    "global_eval_title": "Evaluation & Reflection",
+    "global_eval_ph": "Evaluation and reflection...",
+
+    "status_chip_completed": "Completed",
+    "status_chip_draft": "Draft Saved",
+    "status_chip_empty": "Not Saved",
+
+    "btn_save_draft": "Save Draft",
+    "btn_save_complete": "Save as Completed",
+    "btn_submit_all": "Submit All",
+    "btn_submitting": "Submitting...",
+
+    "modal_add_tab_title": "Add New Tab",
+    "modal_tab_name": "Tab Name",
+    "modal_tab_name_ph": "e.g., Quarter 5, Q5",
+    "modal_cancel": "Cancel",
+    "modal_add": "Add Tab",
+
+    "alert_need_classroom_age": "Please fill in the Classroom and Age.",
+    "tabs_submit_step": "Submit {{tabName}}",
+
+    "months_suffix": "月",
+
+    "chip_status_completed": "Completed",
+    "chip_status_draft": "Draft Saved",
+    "chip_status_empty": "Not Saved"
   }
 }
