--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -62,5 +62,123 @@
     "annual_col_staff_training": "職員研修",
      "annual_month_placeholder": "1月",
     "annual_input_placeholder": "入力してください"
+  },
+  "overallplan": {
+    "search_age": "歳",
+    "search_button": "検索する",
+    "add_button": "追加",
+    "col_year": "年度",
+    "col_age": "歳",
+    "col_name": "全体的な計画",
+    "col_action": "操作"
+  },
+  "annualplan": {
+    "title": "Annual Teaching Plan Management",
+    "subtitle": "Annual Teaching Plan Records",
+    "filter_title": "Search & Filter",
+    "search_placeholder": "Search by plan or year...",
+    "year_label": "Year",
+    "age_label": "Age Group",
+    "status_label": "Status",
+    "reset_button": "Reset",
+    "add_button": "Add",
+    "col_year": "Year",
+    "col_age_group": "Age Group",
+    "col_classroom": "Classroom",
+    "col_responsible": "Responsible",
+    "col_status": "Status",
+    "col_manage": "Manage",
+    "status_draft": "Draft",
+    "status_completed": "Completed",
+    "status_approved": "Approved",
+    "delete_confirm": "Do you want to delete this teaching plan?",
+
+    "header_main_title": "メイン情報（Main Table）",
+    "header_tooltip": "基本情報と年間目標",
+    "basic_info": "基本情報",
+    "field_year": "年",
+    "field_classroom": "教室名 *",
+    "field_age": "年齢 *",
+    "field_responsible": "担当者",
+    "annual_goal_label": "年間目標（育みたい子どもの姿）",
+    "annual_goal_ph": "育てたい子どもの姿...",
+    "dev_process_title": "子どもの発達過程",
+    "child_growth_title": "子どもの育つ姿",
+    "dev1_label": "子どもの発達過程 1",
+    "dev2_label": "子どもの発達過程 2",
+    "dev3_label": "子どもの発達過程 3",
+    "dev1_ph": "子どもの発達過程 1...",
+    "dev2_ph": "子どもの発達過程 2...",
+    "dev3_ph": "子どもの発達過程 3...",
+
+    "age_m1": "1 歳",
+    "age_m1_6": "1 歳 6 か月",
+    "age_m2": "2 歳",
+    "age_m2_11": "2 歳 11 か月",
+    "age2_m2": "2 歳",
+    "age2_m2_6": "2 歳 6 か月",
+    "age2_m3": "3 歳",
+    "age2_m3_11": "3 歳 11 か月",
+
+    "btn_back": "戻る",
+    "btn_save_main": "メイン情報を保存",
+    "btn_saving": "保存中...",
+    "header_saved": "✅ メイン情報の保存が完了しました（ID: {{id}}）",
+    "header_error": "❌ 必須項目を入力してください。",
+    "header_saving": "⏳ データを保存中...",
+
+    "progress_title": "データ送信の進捗状況",
+
+    "detail_title": "タブ別情報（Detail Table）",
+    "period_start": "開始",
+    "period_end": "終了",
+    "period_to": "～",
+    "last_saved": "最終保存",
+
+    "aim_title": "ねらい（目標）",
+    "aim_nursing_label": "養護",
+    "aim_nursing_ph": "養護...",
+    "aim_education_label": "教育",
+    "aim_education_ph": "教育...",
+
+    "content_title": "内容",
+    "content_nursing_title": "養護",
+    "content_life_stability_label": "生命の保持・情緒の安定",
+    "content_life_stability_ph": "生命の保持・情緒の安定...",
+    "content_education_title": "教育",
+    "content_dev_perspective_label": "身体的・社会的・精神的発達",
+    "content_dev_perspective_ph": "身体的・社会的・精神的発達...",
+    "content_nutrition_title": "食育",
+    "content_nutrition_label": "食育",
+    "content_nutrition_ph": "食育...",
+
+    "global_family_title": "家庭・地域との連携",
+    "global_family_ph": "家庭・地域との連携プラン...",
+    "global_eval_title": "評価・反省",
+    "global_eval_ph": "評価と振り返り...",
+
+    "status_chip_completed": "完了",
+    "status_chip_draft": "下書き保存",
+    "status_chip_empty": "未保存",
+
+    "btn_save_draft": "下書き保存",
+    "btn_save_complete": "完了保存",
+    "btn_submit_all": "すべて送信",
+    "btn_submitting": "送信中...",
+
+    "modal_add_tab_title": "新しいタブを追加",
+    "modal_tab_name": "タブ名",
+    "modal_tab_name_ph": "例: 第5期, Q5",
+    "modal_cancel": "キャンセル",
+    "modal_add": "タブを追加",
+
+    "alert_need_classroom_age": "教室名と年齢を入力してください。",
+    "tabs_submit_step": "{{tabName}} を送信",
+
+    "months_suffix": "月",
+
+    "chip_status_completed": "完了",
+    "chip_status_draft": "下書き保存",
+    "chip_status_empty": "未保存"
   }
 }
