--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -72,26 +72,47 @@
     "col_name": "全体的な計画",
     "col_action": "操作"
   },
-  "annualplan": {
-    "title": "Annual Teaching Plan Management",
-    "subtitle": "Annual Teaching Plan Records",
-    "filter_title": "Search & Filter",
-    "search_placeholder": "Search by plan or year...",
-    "year_label": "Year",
-    "age_label": "Age Group",
-    "status_label": "Status",
-    "reset_button": "Reset",
-    "add_button": "Add",
-    "col_year": "Year",
-    "col_age_group": "Age Group",
-    "col_classroom": "Classroom",
-    "col_responsible": "Responsible",
-    "col_status": "Status",
-    "col_manage": "Manage",
-    "status_draft": "Draft",
-    "status_completed": "Completed",
-    "status_approved": "Approved",
-    "delete_confirm": "Do you want to delete this teaching plan?",
+   "annualplan": {
+    "title": "年間指導計画管理",
+    "subtitle": "年間指導計画一覧",
+    "filter_title": "検索・フィルター",
+    "search_placeholder": "指導計画・年で検索...",
+    "year_label": "年",
+    "age_label": "年齢グループ",
+    "status_label": "ステータス",
+    "reset_button": "リセット",
+    "add_button": "新規追加",
+    "col_year": "年",
+    "col_age_group": "年齢グループ",
+    "col_classroom": "クラス",
+    "col_responsible": "担当",
+    "col_status": "ステータス",
+    "col_manage": "管理",
+    "status_draft": "下書き",
+    "status_completed": "完了",
+    "status_approved": "承認済み",
+    "delete_confirm": "この指導計画を削除しますか？"
+  },
+   "annualplanadd": {
+    "title": "年間指導計画管理",
+    "subtitle": "年間指導計画一覧",
+    "filter_title": "検索・フィルター",
+    "search_placeholder": "指導計画・年で検索...",
+    "year_label": "年",
+    "age_label": "年齢グループ",
+    "status_label": "ステータス",
+    "reset_button": "リセット",
+    "add_button": "新規追加",
+    "col_year": "年",
+    "col_age_group": "年齢グループ",
+    "col_classroom": "クラス",
+    "col_responsible": "担当",
+    "col_status": "ステータス",
+    "col_manage": "管理",
+    "status_draft": "下書き",
+    "status_completed": "完了",
+    "status_approved": "承認済み",
+    "delete_confirm": "この指導計画を削除しますか？",
 
     "header_main_title": "メイン情報（Main Table）",
     "header_tooltip": "基本情報と年間目標",
@@ -157,9 +178,9 @@
     "global_eval_title": "評価・反省",
     "global_eval_ph": "評価と振り返り...",
 
-    "status_chip_completed": "完了",
-    "status_chip_draft": "下書き保存",
-    "status_chip_empty": "未保存",
+    "chip_status_completed": "完了",
+    "chip_status_draft": "下書き保存",
+    "chip_status_empty": "未保存",
 
     "btn_save_draft": "下書き保存",
     "btn_save_complete": "完了保存",
@@ -175,10 +196,6 @@
     "alert_need_classroom_age": "教室名と年齢を入力してください。",
     "tabs_submit_step": "{{tabName}} を送信",
 
-    "months_suffix": "月",
-
-    "chip_status_completed": "完了",
-    "chip_status_draft": "下書き保存",
-    "chip_status_empty": "未保存"
+    "months_suffix": "月"
   }
 }
