--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -69,7 +69,7 @@
     "add_button": "追加",
     "col_year": "年度",
     "col_age": "歳",
-    "col_name": "全体的な計画",
+    "col_name": "作成日時",
     "col_action": "操作"
   },
    "annualplan": {
